force-app/main/default/objects/SDOC__SDJob__c/SDOC__SDJob__c.object-meta.xml
<CustomObject>
    <description>S-Doc: Allows auto-generate and email of documents via batch, list view, import, workflow or lightning process builder.</description>
    <label>SDoc Job</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SDJob Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S-Docs Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>