force-app/main/default/objects/SDOC__SDJob__c/fields/SDOC__Auto_Upload__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Auto_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto_Upload</label>
    <type>Checkbox</type>
</CustomField>