force-app/main/default/objects/SDOC__SDJob__c/fields/SDOC__SDCreate3_Parameters__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDCreate3_Parameters__c</fullName>
    <label>SDCreate3 Parameters</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>