force-app/main/default/objects/SDOC__SDJob__c/fields/SDOC__Status_Link__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Status_Link__c</fullName>
    <formula>IF (CONTAINS(SDOC__Status__c, &apos;Error&apos;),
  HYPERLINK(&apos;/&apos; + Id, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &apos;&apos;) + SDOC__Status__c, &apos;_blank&apos;),
  IF (ISNUMBER(SDOC__Status__c),
    IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;&apos;, 7, value(SDOC__Status__c)/2) &amp; IMAGE(&apos;/img/s.gif&apos;, &apos;&apos;, 7, (50 - value(SDOC__Status__c))/2) &amp; &apos; &apos; &amp; SDOC__Status__c &amp; &apos;%&apos;,
    IF (SDOC__Status__c = &apos;Selected&apos;,
      IMAGE(&apos;/img/s.gif&apos;, &apos;&apos;, 7, 50) &amp; &apos; &apos; &amp; &apos;0%&apos;,
      IF (SDOC__Status__c = &apos;Completed&apos;,
        IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;&apos;, 7, 50) &amp; &apos; &apos;&amp; &apos;100%&apos; &amp; SDOC__SDoc1_View__c &amp; &apos; &apos; &amp; SDOC__SDoc2_View__c,
        SDOC__Status__c
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Link</label>
    <type>Text</type>
</CustomField>